# twerk

./: .gitattributes  .gitignore  .mutants.toml  AGENTS.md  CLAUDE.md  Cargo.toml  DISTRIBUT-test.yaml  FUNCTIONAL_RUST_CHECKLIST.md  MIGRATION.md  PORT-GAPS.md  README.md  TRUTH_SERUM_DISTRIBUTED.md  TYPESAFE_REFACTOR.md  VERIFICATION.md  architecture-spec.md  bug_test.rs  conf.rs  config.toml  config.yaml  deny.toml  docker-compose.yml  dolt-server.pid  encrypt.rs  fns.rs  hash.rs  host.rs  httpx.rs  improvements.md  lib.rs  main.rs  manifest  moon.yml  netx.rs  red-queen-twerk-infrastructure.md  redact.rs  rimkv1bgsolpvbebsshbkueok2cji28r  rust-toolchain.toml  slices.rs  test-plan.md  test-review-round1.md  (+7 more)
cache/: Cargo.toml  item.rs  lib.rs
cli/: Cargo.toml  banner.rs  cli.rs  commands.rs  error.rs  health.rs  lib.rs  migrate.rs  run.rs
coordinator/: Cargo.toml  config.rs  coordinator.rs  helpers.rs  lib.rs  subscriptions.rs
coordinator/api/: context.rs  error.rs  handlers.rs  mod.rs
coordinator/handlers/: cancel.rs  completed.rs  error.rs  heartbeat.rs  job.rs  log.rs  mod.rs  pending.rs  progress.rs  redelivered.rs  schedule.rs  started.rs  test_helpers.rs
coordinator/handlers/completed/: calc.rs  eval.rs  mod.rs
coordinator/handlers/job/: calc.rs  eval.rs  mod.rs
coordinator/handlers/schedule/: calc.rs  mod.rs
coordinator/scheduler/: mod.rs
coordinator/tests/: api_integration_test.rs
crates/twerk-app/: Cargo.toml
crates/twerk-app/benches/: engine.rs  large_scale.rs  stress_10x.rs
crates/twerk-app/src/: lib.rs
crates/twerk-app/tests/: auth_middleware_test.rs  bdd_behavioral_contracts.rs  benchmark_test.rs  ci_cd_pipeline_simulation.rs  coordinator_adversarial_test.rs  coordinator_test.rs  e2e_load_test.rs  engine_graceful_shutdown_test.rs  engine_lifecycle_test.rs  engine_submit_task_test.rs  handlers_test.rs  middleware_test.rs  pokemon_api_benchmark.rs  profiling_bench.rs  realistic_profiling.rs  standalone_e2e_test.rs  twerk_chaos_engineering_benchmark.rs  twerk_yaml_workflow_benchmark.rs  yaml_workflow_bench.rs
crates/twerk-bench/: Cargo.toml
crates/twerk-bench/src/: main.rs
crates/twerk-cli/: Cargo.toml  build.rs
crates/twerk-cli/src/: banner.rs  cli.rs  commands.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  migrate.rs  output.rs  run.rs
crates/twerk-cli/tests/: bdd_behavior_report.rs  bdd_behavioral_contract_test.rs  e2e_cli_test.rs  format_output_test.rs  handler_error_body_test.rs  trigger_contract_regression_test.rs  trigger_negative_test.rs
crates/twerk-common/: Cargo.toml
crates/twerk-common/proofs/: Cargo.toml
crates/twerk-common/src/: conf.rs  constants.rs  env.rs  lib.rs  logging.rs  map.rs  reexec.rs  slices.rs  slot.rs  wildcard.rs
crates/twerk-core/: Cargo.toml
crates/twerk-core/examples/: red_queen_adversarial.rs
crates/twerk-core/fuzz/: Cargo.toml
crates/twerk-core/proofs/: Cargo.toml
crates/twerk-core/proptest-regressions/: id.txt  trigger.txt
crates/twerk-core/src/: domain_types.rs  encrypt.rs  env.rs  eval.rs  fns.rs  hash.rs  host.rs  id.rs  job.rs  lib.rs  mount.rs  node.rs  redact.rs  repository.rs  repository_inmemory.rs  role.rs  stats.rs  task.rs  trigger.rs  user.rs  uuid.rs  validation.rs  webhook.rs
crates/twerk-core/tests/: asl_adversarial_test.rs  asl_container_test.rs  asl_data_flow_test.rs  asl_functions_test.rs  asl_machine_test.rs  asl_states_test.rs  asl_transition_test.rs  asl_types_test.rs  asl_validation_test.rs  domain_roundtrip_test.rs  domain_verification_test.rs  eval_test.rs  mutation_kill_test.rs  red_queen_adversarial.rs  red_queen_deser_fix.rs  red_queen_gen2.rs  red_queen_gen3.rs  red_queen_gen4.rs  red_queen_trigger_error.rs  repository_inmemory_test.rs  trigger_data_test.rs  trigger_registry_test.rs  types_integration_test.rs  validation_test.rs  webhook_test.rs  yaml_roundtrip_fidelity_test.rs
crates/twerk-infrastructure/: Cargo.toml
crates/twerk-infrastructure/benches/: hot_path.rs
crates/twerk-infrastructure/proofs/: Cargo.toml
crates/twerk-infrastructure/src/: config.rs  encryption.rs  httpx.rs  lib.rs
crates/twerk-infrastructure/tests/: cache_test.rs  docker_cleanup_test.rs  postgres_test.rs  (+9 more)
crates/twerk-perf-kernels/: Cargo.toml
crates/twerk-runtime/: Cargo.toml
crates/twerk-web/: Cargo.toml  openapi.json
datastore/: Cargo.toml  mod.rs
datastore/postgres/: DECISION.md  encrypt.rs  mod.rs  records.rs  schema.rs
engine/: Cargo.toml  WAVE22_IMPLEMENTATION.md  broker.rs  broker_test.rs  coordinator.rs  coordinator_test.rs  datastore.rs  datastore_test.rs  default.rs  engine_test.rs  lib.rs  locker.rs  worker.rs
engine/locker/: locker_test.rs
engine/worker/: docker_runtime.rs  helpers.rs  hostenv.rs  mounters.rs  podman_runtime.rs  runtime_core.rs  shell_runtime.rs  worker_init.rs  worker_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_docker_reference_parse.rs  fuzz_encrypt_decrypt_roundtrip.rs  fuzz_expand_path.rs  fuzz_flatten_table.rs  fuzz_metadata_key_validation.rs  fuzz_parse_duration.rs  fuzz_redact_vars.rs  fuzz_transition_deserialize.rs  fuzz_trigger_id_parser.rs  fuzz_trigger_update_error_serialization.rs  fuzz_trigger_update_handler_envelope.rs  fuzz_trigger_update_idempotent_replay.rs  fuzz_trigger_update_request_deserialize.rs  fuzz_wait_duration_deserialize.rs  fuzz_wildcard_match.rs  fuzz_yaml_from_slice.rs
health/: Cargo.toml  lib.rs
input/: Cargo.toml  duration.rs  implementation.md  job.rs  lib.rs  task.rs  validate.rs  validate_test.rs
locker/: Cargo.toml  inmemory.rs  lib.rs  postgres.rs
locker/tests/: inmemory_test.rs  postgres_test.rs
pokemon-server/: Cargo.toml  README.md
pokemon-server/src/: client.rs  hammer.rs  main.rs  pokemon_data.rs  workflow.rs
tork/: Cargo.toml  eval.rs  health.rs  job.rs  job_test.rs  mod.rs  mount.rs  node.rs  role.rs  stats.rs  task.rs  task_test.rs  user.rs  user_test.rs  version.rs  webhook.rs
tork/broker/: mod.rs
tork/datastore/: mod.rs
tork/runtime/: mod.rs  mount.rs  multi.rs  multi_test.rs
tork/src/: job.rs  lib.rs  node.rs  role.rs  stats.rs  task.rs
(+1190 files in other folders)
