[workspace]
resolver = "2"
members = [
    "crates/twerk-common",
    "crates/twerk-core",
    "crates/twerk-infrastructure",
    "crates/twerk-app",
    "crates/twerk-web",
    "crates/twerk-cli",
]
exclude = [
    "pokemon-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Twerk Contributors"]
repository = "https://github.com/runabol/twerk"
license = "Apache-2.0"

[workspace.dependencies]
# Internal Crates (The Hard Boundaries)
twerk-common = { path = "crates/twerk-common" }
twerk-core = { path = "crates/twerk-core" }
twerk-infrastructure = { path = "crates/twerk-infrastructure" }
twerk-app = { path = "crates/twerk-app" }
twerk-web = { path = "crates/twerk-web" }

# Shared External Dependencies
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat", "io"] }
futures-util = "0.3"
async-trait = "0.1"
bytes = "1.9"
nix = { version = "0.29", features = ["process", "signal", "user"] }

# Functional & Types
itertools = "0.14"
tap = "1.0"
rpds = "1.2"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
regex = "1.11"
once_cell = "1.20"
dashmap = "6.0"

# Infrastructure & I/O
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "time", "uuid", "rust_decimal", "macros", "migrate", "json"] }
lapin = "4.4"
bollard = "0.20"
ureq = { version = "2.12", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }
postgres = "0.19"
postgres-native-tls = "0.5"
native-tls = "0.2"
parking_lot = "0.12"
libc = "0.2"
tar = "0.4"
futures-lite = "2.3"
futures-core = "0.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }
governor = "0.8"
config = "0.14"
toml = "0.8"
sysinfo = "0.33"
hostname = "0.4"
url = "2.5"
dirs = "6.0"
serde-saphyr = { version = "0.0.23", features = ["serialize", "deserialize", "properties", "include", "include_fs", "miette"] }
tempfile = "3.14"

# Security & Crypto
bcrypt = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"
md5 = "0.7"
base64 = "0.22"
rand = "0.9"
subtle = "2.5"
zeroize = "1.7"

# CLI

clap = { version = "4.5", features = ["derive", "env"] }

# Expression Evaluation
evalexpr = "13.1"
cron = "0.12"
chrono-tz = "0.10"
jmespath = "0.5"

# Scheduling
tokio-cron-scheduler = "0.15"

# Test Dependencies
tokio-test = "0.4"
mockito = "1.0"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "rabbitmq"] }
rstest = "0.26.1"
proptest = "1.5"

# Logging
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
