[package]
name = "tork-cache"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
dashmap = "6.0"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
