[package]
name = "tork-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Functional programming
itertools = "0.14"
tap = "1.0"
rpds = "1.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Engine (for run command)
tork-engine = { path = "../engine" }

# Datastore (for migrate command)
datastore = { path = "../datastore" }

# Time (for datastore Options)
time = { version = "0.3" }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[lib]
path = "lib.rs"
