[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
description = "Coordinator module for Tork task queue system"

[dependencies]
# Local tork crate
tork = { path = "../tork" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (Axum is already in workspace)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Functional programming
itertools = "0.14"
tap = "1"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"

[lib]
path = "lib.rs"