[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
description = "Coordinator module for Tork task queue system"

[dependencies]
# Local tork crates
tork = { path = "../tork" }
tork-runtime = { path = ".." }
tork-input = { path = "../input" }
tork-health = { path = "../health" }
locker = { path = "../locker" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (Axum is already in workspace)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Functional programming
itertools = "0.14"
tap = "1"

# Async utilities
futures-util = "0.3"

# Cron scheduling (Go gocron parity)
tokio-cron-scheduler = "0.15"

# Async trait support
async-trait = "0.1"

# Expression evaluation
evalexpr = "13"
regex = "1"
rand = "0.9"

# Password hashing (user creation)
bcrypt = "0.17"

# System info (for coordinator heartbeats)
sysinfo = "0.33"

# Hostname (for coordinator heartbeats)
hostname = "0.4"

[dev-dependencies]
# Local crates for integration tests
datastore = { path = "../datastore" }
tork-runtime = { path = ".." }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }

tokio-test = "0.4"
mockito = "1"

[lib]
path = "lib.rs"