[package]
name = "datastore"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
# Local tork types
tork = { path = "../tork" }

# Async runtime
tokio = { version = "1.0", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Functional programming
rpds = "1.0"
itertools = "0.14"
tap = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time", "uuid", "rust_decimal"] }

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
