[package]
name = "tork-engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
# Local tork crate
tork = { path = "../tork" }

# Local locker crate
locker = { path = "../locker" }

# Local datastore crate
datastore = { path = "../datastore" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures-util = "0.3"

# Functional programming
itertools = "0.14"
tap = "1.0"
rpds = "1.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hash
bcrypt = "0.17"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace"] }

# Rate limiting
governor = "0.7"

# Time
time = { version = "0.3", features = ["serde"] }

# Utilities
once_cell = "1.20"
dashmap = "6.0"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
