[package]
name = "twerk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
twerk-web = { path = "../crates/twerk-web" }
twerk-common = { path = "../crates/twerk-common" }
twerk-core = { path = "../crates/twerk-core" }
twerk-infrastructure = { path = "../crates/twerk-infrastructure" }
serde_json = "1"
arbitrary = { version = "1.3", features = ["derive"] }
axum = "0.8"
toml = "0.8"

[[bin]]
name = "fuzz_trigger_id_parser"
path = "fuzz_targets/fuzz_trigger_id_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trigger_update_request_deserialize"
path = "fuzz_targets/fuzz_trigger_update_request_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_metadata_key_validation"
path = "fuzz_targets/fuzz_metadata_key_validation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trigger_update_handler_envelope"
path = "fuzz_targets/fuzz_trigger_update_handler_envelope.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trigger_update_error_serialization"
path = "fuzz_targets/fuzz_trigger_update_error_serialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trigger_update_idempotent_replay"
path = "fuzz_targets/fuzz_trigger_update_idempotent_replay.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wildcard_match"
path = "fuzz_targets/fuzz_wildcard_match.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_duration"
path = "fuzz_targets/fuzz_parse_duration.rs"
test = false
doc = false

[[bin]]
name = "fuzz_expand_path"
path = "fuzz_targets/fuzz_expand_path.rs"
test = false
doc = false

[[bin]]
name = "fuzz_flatten_table"
path = "fuzz_targets/fuzz_flatten_table.rs"
test = false
doc = false

[[bin]]
name = "fuzz_transition_deserialize"
path = "fuzz_targets/fuzz_transition_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wait_duration_deserialize"
path = "fuzz_targets/fuzz_wait_duration_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_redact_vars"
path = "fuzz_targets/fuzz_redact_vars.rs"
test = false
doc = false

[[bin]]
name = "fuzz_docker_reference_parse"
path = "fuzz_targets/fuzz_docker_reference_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_encrypt_decrypt_roundtrip"
path = "fuzz_targets/fuzz_encrypt_decrypt_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_yaml_from_slice"
path = "fuzz_targets/fuzz_yaml_from_slice.rs"
test = false
doc = false
