[package]
name = "tork-health"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
tork = { path = "../tork" }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["sync", "rt", "time", "macros"] }

[dev-dependencies]
