[package]
name = "tork-input"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
[dependencies]
tork = { path = "../tork" }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11"
cron = "0.15"
evalexpr = "13"
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["sync"] }
