[package]
name = "locker"
version = "0.1.0"
edition = "2021"
description = "Distributed locking abstractions with in-memory and PostgreSQL backends"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Async trait support
async-trait = "0.1"

# Database — sqlx for error type compatibility, postgres for lock operations
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
postgres = "0.19"

# Error handling
thiserror = "1"
anyhow = "1"

# Hashing
sha2 = "0.10"

# Synchronization
parking_lot = "0.12"

# Persistent data structures (for potential future use)
rpds = "1"

[dev-dependencies]
tokio-test = "0.4"

[lib]
path = "lib.rs"
