[package]
name = "pokemon-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pokemon-server"
path = "src/main.rs"

[[bin]]
name = "pokemon-client"
path = "src/client.rs"

[[bin]]
name = "pokemon-hammer"
path = "src/hammer.rs"

[[bin]]
name = "pokemon-workflow"
path = "src/workflow.rs"

[dependencies]
# HTTP server
axum = "0.8"

# HTTP client for benchmarking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing for observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
