[package]
name = "tork"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# Functional programming
rpds = "1.0"

# Regex for expression parsing
regex = "1.11"
