[package]
name = "twerk-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
twerk-common.workspace = true
twerk-core.workspace = true
twerk-infrastructure.workspace = true

tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
time.workspace = true
dashmap.workspace = true
axum.workspace = true
tower-http.workspace = true
governor.workspace = true
bollard.workspace = true
lapin.workspace = true
sysinfo.workspace = true
hostname.workspace = true
futures-util.workspace = true
bcrypt.workspace = true
tempfile.workspace = true
bytes.workspace = true
base64.workspace = true
once_cell.workspace = true
