[package]
name = "twerk-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
time.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
uuid.workspace = true
tap.workspace = true
itertools.workspace = true
toml.workspace = true
dirs.workspace = true
hostname.workspace = true
rand.workspace = true
config.workspace = true
once_cell.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
