[package]
name = "twerk-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
twerk-common.workspace = true
serde.workspace = true
serde_json.workspace = true
evalexpr.workspace = true
regex.workspace = true
cron.workspace = true
async-trait.workspace = true
rand.workspace = true
itertools.workspace = true
tap.workspace = true
rpds.workspace = true
thiserror.workspace = true
url.workspace = true
indexmap = { version = "2", features = ["serde"] }
sysinfo.workspace = true
once_cell.workspace = true
time.workspace = true
futures-util.workspace = true
tracing.workspace = true
uuid.workspace = true
ureq.workspace = true
tokio.workspace = true
bcrypt.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
md5.workspace = true
base64.workspace = true
parking_lot.workspace = true
zeroize.workspace = true
chrono-tz.workspace = true
jmespath.workspace = true
utoipa = { workspace = true, features = ["time"] }

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
mockito.workspace = true
serde-saphyr.workspace = true
