[package]
name = "twerk-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
twerk-common.workspace = true
twerk-core.workspace = true
twerk-infrastructure.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
governor.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bcrypt.workspace = true
base64.workspace = true
time.workspace = true
bytes.workspace = true
serde_yml.workspace = true
