[package]
name = "twerk-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
integration = []

[dependencies]
twerk-common.workspace = true
twerk-core.workspace = true
twerk-infrastructure.workspace = true
twerk-app.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
governor.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bcrypt.workspace = true
base64.workspace = true
time.workspace = true
bytes.workspace = true
serde-saphyr.workspace = true
itertools.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
testcontainers.workspace = true
testcontainers-modules.workspace = true
rstest.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha = "0.9"
