[package]
name = "twerk-core-fuzz"
version = "0.0.1"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
serde = "1.0"
serde_json = "1.0"
twerk-core = { path = "..", features = [] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "fuzz_asl_eval"
path = "fuzz_targets/fuzz_asl_eval.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cron"
path = "fuzz_targets/fuzz_cron.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hostname"
path = "fuzz_targets/fuzz_hostname.rs"
test = false
doc = false

[[bin]]
name = "fuzz_serde_deserialize"
path = "fuzz_targets/fuzz_serde_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_webhook_url"
path = "fuzz_targets/fuzz_webhook_url.rs"
test = false
doc = false
