[package]
name = "twerk-core-proofs"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
twerk-core = { path = "..", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
indexmap = { version = "2", features = ["serde"] }

[profile.release]
debug = true
